# openDVP

./: .buildinfo  .gitignore  README.md  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  references.html  requirements.txt  ruff_report.txt  search.html  searchindex.js  tox.ini
.doctrees/: changelog.doctree  index.doctree  references.doctree
.doctrees/Tutorials/: index.doctree
.doctrees/api/: index.doctree  preprocessing.doctree  tools.doctree
.github/workflows/: docs.yml
QuPath_notebooks/: QC2_postfiltering.ipynb
TNBC_notebooks/: TNBC_sample_1.ipynb
Tutorials/: index.html
Tutorials/basics/: Test1.html  index.html
api/: imaging.html  index.html  io.html  metrics.html  plotting.html  pp.html  preprocessing.html  tl.html  tools.html  utils.html
data/geojsons/: 20241010_1340_991.geojson  991_polygons.geojson  unique_classes_mod.csv
data/proteomic/: 20241201_161344_filtered_imputed_outerjoin.h5ad  20241201_170620_filtered_imputed_outerjoin_mergefirst.h5ad
docs/: conf.py  index.md
docs/api/: imaging.md  io.md  metrics.md  plotting.md  preprocessing.md  tools.md  utils.md
docs/source/: conf.py  opendvp.imaging.rst  opendvp.plotting.rst  opendvp.preprocessing.rst  opendvp.rst
functions/: Filter_by_manual_annotations.py  anndata_utils.py  filtering.py  phenotyping.py  qupath_utils.py
html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  opendvp.html  opendvp.imaging.html  opendvp.io.html  opendvp.metrics.html  opendvp.plotting.html  opendvp.preprocessing.html  opendvp.tools.html  opendvp.utils.html  py-modindex.html  search.html  searchindex.js
html/_sources/: opendvp.io.rst.txt  opendvp.metrics.rst.txt  opendvp.tools.rst.txt  opendvp.utils.rst.txt
jupyternotebooks/: 10_Manual_Annotations copy.ipynb  10_Manual_Annotations.ipynb  11_SpatialData_creation.ipynb  12_Figures.ipynb  4_Parsing_geojsons_before_sdata.ipynb  5_Create_SpatialData.ipynb  5_Parse_Primary_Relapse_geojsons.ipynb  6_Read_and_viz_sdata.ipynb  7_Export_shapes_for_Qupath.ipynb  8_Filtering.ipynb  9_Indexing_of_masks.ipynb  SpatialData_for_figures copy.ipynb  SpatialData_for_figures.ipynb  Untitled-1.ipynb  figure_1_v10.ipynb  sdata_tests.ipynb
misc_notebooks/: Testing_seg_to_polygons.ipynb
sdata_notebooks/: 1_CreateSdataObject.ipynb  1_CreateSdataObject_TNBC.ipynb  2_FilterArtefacts.ipynb  2_FilterArtefacts_TNBC.ipynb  3_Phenotyping_TNBC.ipynb  3_Phenotyping_TNBC_20240310.ipynb  4_CellularNeighborhoods.ipynb  5_Subset_for_paper.ipynb
src/opendvp/: __init__.py  anndata_utils.py  filtering.py  imaging.py  logger.py  phenotyping.py  preprocessing.py  qupath_utils.py  shapes_to_QP_voronoi.py  utils.py
test_data/geojsons/: 20241011_1031_991_refill.geojson  unique_classes.csv
tests/: test.csv  test_2.csv  test_import.py  tmp_tests.ipynb
tests/io/: test_DIANN_to_adata.py  test_adata_to_perseus.py  test_adata_to_qupath.py  test_export_adata.py  test_export_figure.py  test_import_perseus.py  test_quant_to_adata.py  (+1 more)
(+88 files in other folders)
